# rust-pomo-discord

./: Cargo.toml  PKGBUILD  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
