[package]
name = "pomodoro-tui" # تأكد أن الاسم متاح في crates.io
version = "1.0.5"
edition = "2021"
authors = ["hexbyte16 hexbyte41@gmail.com"]
description = "A professional Pomodoro TUI with Discord Rich Presence and YouTube BGM support"
license = "MIT"
repository = "https://github.com/hexbyte16/rust-pomo-discord"
homepage = "https://github.com/hexbyte16/rust-pomo-discord"
keywords = ["pomodoro", "tui", "discord", "productivity", "rust"]
categories = ["command-line-utilities", "productivity"]

# مهم جداً: استبعاد الملفات الضخمة من النشر
#crates.io لديها حد 10 ميجا للمشروع، والملفات الصوتية ستجعل النشر يفشل
exclude = [
    "alert.mp3",
    "bgm/*",
    "target/*",
    "screenshots/*"
]

[dependencies]
# ... مكتباتك كما هي ...
